# WW-RaftKV

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  clean.sh  run.sh  stop.sh
example/include/: KVOperation.pb.h  client_channel.h  uuid.h
example/proto/: RaftOperation.proto
example/src/: RaftOperation.pb.cc  client_channel.cpp  raft_client.cpp  raft_example.cpp  uuid.cpp
raftkv/: CMakeLists.txt
raftkv/kvstore/: CMakeLists.txt
raftkv/kvstore/include/: KVCommon.h  KVStore.h  SkipList.h
raftkv/logger/: CMakeLists.txt  Logger.cpp  Logger.h
raftkv/logger/common/include/: LogLevel.h  LogMessage.h
raftkv/logger/formatter/include/: DefaultFormatter.h  FormatterBase.h
raftkv/logger/formatter/src/: DefaultFormatter.cpp
raftkv/logger/logger/include/: AsyncLogger.h  AsyncWorker.h  LoggerBase.h  LoggerBuffer.h  SyncLogger.h
raftkv/logger/logger/src/: AsyncLogger.cpp  AsyncWorker.cpp  LoggerBase.cpp  LoggerBuffer.cpp  SyncLogger.cpp
raftkv/logger/sink/include/: ConsoleSink.h  DailyFileSink.h  DefaultFileSink.h  FileSink.h  HourlyFileSink.h  RotateFileSink.h  SinkBase.h  TimedFileSink.h
raftkv/logger/sink/src/: ConsoleSink.cpp  DailyFileSink.cpp  DefaultFileSink.cpp  FileSink.cpp  HourlyFileSink.cpp  RotateFileSink.cpp  SinkBase.cpp  TimedFileSink.cpp
raftkv/memory-pool/: CMakeLists.txt  CmakeLists.txt  Memory.cpp  Memory.h
raftkv/memory-pool/caches/include/: CentralCache.h  PageCache.h  ThreadCache.h
raftkv/memory-pool/caches/src/: CentralCache.cpp  PageCache.cpp  ThreadCache.cpp
raftkv/memory-pool/common/include/: FreeList.h  MemoryCommon.h  Platform.h  Size.h  SpanList.h
raftkv/memory-pool/common/src/: FreeList.cpp  Platform.cpp  Size.cpp  SpanList.cpp
raftkv/raft/: CMakeLists.txt
raftkv/raft-app/: CMakeLists.txt
raftkv/raft-app/include/: RaftClerk.h  RaftPeerNet.h
raftkv/raft-app/src/: RaftClerk.cpp  RaftPeerNet.cpp
raftkv/raft-core/: CMakeLists.txt
raftkv/raft-core/common/include/: Common.h  RaftLog.h  RaftLogEntry.h  RaftLogger.h  RaftNode.h  RaftPeer.h
raftkv/raft-core/common/src/: RaftLog.cpp  RaftLogEntry.cpp  RaftNode.cpp  RaftPeer.cpp
raftkv/raft-core/include/: Common.h  Raft.h  RaftChannel.h  RaftCommon.h  RaftLog.h  RaftLogEntry.h  RaftLogger.h  RaftMessage.h  RaftNode.h  RaftPeer.h  RaftPersist.pb.h  RaftReady.h
raftkv/raft-core/proto/: RaftPersist.proto
raftkv/raft-core/raft/include/: Raft.h
raftkv/raft-core/raft/src/: Raft.cpp
raftkv/raft-core/rpc/client/include/: RaftChannel.h  RaftClient.h  RaftClosure.h
raftkv/raft-core/rpc/client/src/: RaftChannel.cpp  RaftClient.cpp
raftkv/raft-core/rpc/message/include/: raft.pb.h
raftkv/raft-core/rpc/message/proto/: raft.proto
raftkv/raft-core/rpc/message/src/: raft.pb.cc
raftkv/raft-core/rpc/server/include/: RaftDispatcher.h  RaftServer.h  RaftServiceImpl.h
raftkv/raft-core/rpc/server/src/: RaftDispatcher.cpp  RaftServer.cpp  RaftServiceImpl.cpp
raftkv/raft-core/src/: Raft.cpp  RaftChannel.cpp  RaftLog.cpp  RaftLogEntry.cpp  RaftMessage.cpp  RaftNode.cpp  RaftPeer.cpp  RaftPersist.pb.cc
raftkv/raft-rpc/: CMakeLists.txt
raftkv/raft-rpc/include/: Raft.pb.h  RaftRpcCRC32.h  RaftRpcChannel.h  RaftRpcClient.h  RaftRpcClosure.h  RaftRpcCommon.h  RaftRpcController.h  RaftRpcData.pb.h  RaftRpcDispatcher.h  RaftRpcFixedHeader.h  RaftRpcSerialization.h  RaftRpcServer.h  RaftRpcService.h  RaftSnapshot.pb.h
raftkv/raft-rpc/proto/: KVOperation.proto  Raft.proto  RaftRpcData.proto  RaftSnapshot.proto
raftkv/raft-rpc/src/: KVOperation.pb.cc  Raft.pb.cc  RaftRpcCRC32.cpp  RaftRpcChannel.cpp  RaftRpcClient.cpp  RaftRpcClosure.cpp  RaftRpcController.cpp  RaftRpcData.pb.cc  RaftRpcDispatcher.cpp  RaftRpcFixedHeader.cpp  RaftRpcSerialization.cpp  RaftRpcServer.cpp  RaftRpcService.cpp  RaftSnapshot.pb.cc
raftkv/raft/include/: Raft.pb.h  RaftClerk.h  RaftOperation.pb.h  RaftPeerNet.h  RaftRpcChannel.h  RaftRpcClient.h  RaftRpcClosure.h  RaftRpcDispatcher.h  RaftRpcHeader.pb.h  RaftRpcSerialization.h  RaftRpcServer.h  RaftRpcServiceImpl.h  RaftSnapShot.pb.h  RaftSnapshot.pb.h
raftkv/raft/proto/: Raft.proto  RaftSnapShot.proto  RaftSnapshot.proto
raftkv/raft/src/: Raft.pb.cc  RaftClerk.cpp  RaftPeerNet.cpp  RaftRpcChannel.cpp  RaftRpcClient.cpp  RaftRpcDispatcher.cpp  RaftRpcHeader.pb.cc  RaftRpcSerialization.cpp  RaftRpcServer.cpp  RaftRpcServiceImpl.cpp  RaftSnapShot.pb.cc  RaftSnapshot.pb.cc
raftkv/rpc-core/: CMakeLists.txt
raftkv/rpc-core/client/include/: RpcChannel.h
raftkv/rpc-core/client/src/: RpcChannel.cpp
raftkv/rpc-core/config/include/: RpcConfig.h
raftkv/rpc-core/config/src/: RpcConfig.cpp
raftkv/rpc-core/serialization/include/: RpcHeader.pb.h  RpcSerialization.h
raftkv/rpc-core/serialization/proto/: RpcHeader.proto
raftkv/rpc-core/serialization/src/: RpcHeader.pb.cc  RpcSerialization.cpp
raftkv/rpc-core/server/include/: RpcDispatcher.h
raftkv/rpc-core/server/src/: RpcDispatcher.cpp
raftkv/rpc-core/zookeeper/include/: ServiceDiscovery.h  ServiceRegistry.h  ZooKeeperClient.h
raftkv/rpc-core/zookeeper/src/: ServiceDiscovery.cpp  ServiceRegistry.cpp  ZooKeeperClient.cpp
